update rtc conf

--- a/index.html
+++ b/index.html
@@ -95,7 +95,15 @@
       // Fonction pour créer une connexion avec un autre pair
       const createPeerConnection = (peerId) => {
         console.log("Creating peer connection with:", peerId);
-        const peerConnection = new RTCPeerConnection();
+        const peerConnection = new RTCPeerConnection({
+          iceServers:
+            process.env.NODE_ENV === "production"
+              ? [
+                  { urls: "stun:stun1.l.google.com:19302" },
+                  { urls: "stun:stun2.l.google.com:19302" },
+                ]
+              : [],
+        });
 
         // Ajouter le flux local
         localStream
@@ -145,7 +153,15 @@
 
       // Fonction pour gérer une offre
       const handleOffer = (data) => {
-        const peerConnection = new RTCPeerConnection();
+        const peerConnection = new RTCPeerConnection({
+          iceServers:
+            process.env.NODE_ENV === "production"
+              ? [
+                  { urls: "stun:stun1.l.google.com:19302" },
+                  { urls: "stun:stun2.l.google.com:19302" },
+                ]
+              : [],
+        });
 
         // Ajouter le flux local uniquement ici
         localStream
